--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
+language: generic
 sudo: required
+
 services:
-    -docker
+  - docker
 
 before_install:
-    - docker build -t samu126/docker-react -f Dockerfile.dev .
+  - docker build -t samu126/docker-react -f Dockerfile.dev .
 
-    script:
-        - docker run -e CI=true samu126/docker-react npm run test
+script:
+  - docker run -e CI=true samu126/docker-react npm run test
