--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ before_install:
 script:
   - docker run -e CI=true samu126/docker-react npm run test
 
-access_key_id: "$AWS_ACCESS_KEY"
-secret_access_key: "$AWS_SECRET_KEY"
+access_key_id: $AWS_ACCESS_KEY
+secret_access_key: $AWS_SECRET_KEY
 
 deploy:
     provided: elasticbeanstalk
