--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
   - docker run -e CI=true samu126/docker-react npm run test
 
 deploy:
-    provided: elasticbeanstalk
+    provider: elasticbeanstalk
     region: "us-east-2"
     app: "docker-react"
     env: "DockerReact-env"
